# 42-Heilbronn

CPP Modules/: Makefile  cache_test  perf  perf.cpp  precompiled_heder  precompiled_heder.cpp  ref  ref.cpp  sizes  sizes.cpp  test
C_Piscine_Reloaded/ex00/: exo.tar
C_Piscine_Reloaded/ex06/: ft_print_alphabet.c
C_Piscine_Reloaded/ex07/: ft_print_numbers.c
C_Piscine_Reloaded/ex08/: ft_is_negative.c
C_Piscine_Reloaded/ex09/: ft_ft.c
C_Piscine_Reloaded/ex10/: ft_swap.c
C_Piscine_Reloaded/ex11/: ft_div_mod.c
C_Piscine_Reloaded/ex12/: ft_iterative_factorial.c
C_Piscine_Reloaded/ex13/: ft_recursive_factorial.c
C_Piscine_Reloaded/ex14/: ft_sqrt.c
C_Piscine_Reloaded/ex15/: ft_putstr.c
C_Piscine_Reloaded/ex16/: ft_strlen.c
C_Piscine_Reloaded/ex17/: ft_strcmp.c
C_Piscine_Reloaded/ex18/: ft_print_params.c
C_Piscine_Reloaded/ex19/: ft_sort_params.c
C_Piscine_Reloaded/ex20/: ft_strdup.c
C_Piscine_Reloaded/ex21/: ft_range.c
C_Piscine_Reloaded/ex22/: ft_abs.h
C_Piscine_Reloaded/ex23/: ft_point.h
C_Piscine_Reloaded/ex24/: Makefile
C_Piscine_Reloaded/ex25/: ft_foreach.c
C_Piscine_Reloaded/ex26/: ft_count_if.c
Cursus/: README.md
Cursus/call_me_maybe/: .gitignore  INSTRUCTIONS.md  Makefile  README.md  pyproject.toml
Cursus/call_me_maybe/.github/: copilot-instructions.md
Cursus/call_me_maybe/src/: __init__.py  __main__.py  decoder.py  fsm.py  generator.py  models.py  schema.py  vocabulary.py
Cursus/coders/: types.h  (+25 more)
git_tutorials/: commits.md  config.md  create.md
nvim/: init.lua  lazy-lock.json
tools/: sync_and_push.sh  xmove_mouse.c
(+362 files in other folders)
