[project]
name = "call-me-maybe"
version = "0.1.0"
description = "42 project of constrained decoding LLM"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "flake8",
    "mypy",
    "numpy",
    "pydantic==2",
    "typing_extensions>=4.7.0",
    "pytest>=9.0.2",
]

[tool.uv]
environments = ["python_version == '3.10' and platform_python_implementation == 'CPython'"]

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["."]
